--- a/pinyin.html
+++ b/pinyin.html
@@ -471,7 +471,7 @@
     </div>
 
     <script>
-        const audioBasePath = 'https://github.com/JonathanPageUTP/MandarinAudio/';
+        const audioBasePath = 'https://jonathanpageutp.github.io/MandarinAudio/audios/';
         const sndPlayer = document.getElementById('snd_player');
         const clickRuleSelect = document.getElementById('clickRule');
         let currentAudios = {};
