modificacion de la archura del body

--- a/pinyin.html
+++ b/pinyin.html
@@ -18,7 +18,7 @@
         }
 
         #pinyin_chart {
-            max-width: 1200px;
+            max-width: 95%;
             margin: 0 auto;
             padding: 20px;
         }
