--- a/pinyin.html
+++ b/pinyin.html
@@ -651,7 +651,7 @@
 
         /* Pinyin Section */
         .pinyin-section {
-            padding: 80px 0;
+            padding: 40px 0;
             background: white;
         }
 
@@ -705,6 +705,7 @@
             grid-template-columns: 1fr 1fr;
             gap: 40px;
             margin-top: 50px;
+            padding: 60px;
         }
 
         .info-card {
@@ -729,8 +730,8 @@
 
         /* Contact Section */
         .contact {
-            padding: 80px 0;
-            background: #3d3d3d;
+           /* padding: 80px 0;
+            background: #3d3d3d; */
         }
 
         .contact-wrapper {
@@ -1302,28 +1303,29 @@
         </div>
     </div>
 </section>
-    <!-- What We Offer -->
-    <section class="what-we-offer">
-        <iframe id="JotFormIFrame-019b9f2af89f708b9bee5ec91ac5863eb022"
-  title="MaoMao MandarinGoo HSK1: Asesor de chino mandarín" onload="window.parent.scrollTo(0,0)"
-  allowtransparency="true" allow="geolocation; microphone; camera; fullscreen"
-  src="https://agent.jotform.com/019b9f2af89f708b9bee5ec91ac5863eb022?embedMode=iframe&background=1&shadow=1"
-  frameborder="0" style="
+
+    <!-- 
+<section class="what-we-offer">
+    <iframe id="JotFormIFrame-019b9f2af89f708b9bee5ec91ac5863eb022"
+    title="MaoMao MandarinGoo HSK1: Asesor de chino mandarín" onload="window.parent.scrollTo(0,0)"
+    allowtransparency="true" allow="geolocation; microphone; camera; fullscreen"
+    src="https://agent.jotform.com/019b9f2af89f708b9bee5ec91ac5863eb022?embedMode=iframe&background=1&shadow=1"
+    frameborder="0" style="
     max-width:100%;
     height:688px;
     border:none;
-    
-    width:100%;
-  " scrolling="no">
-</iframe>
-<script src='https://cdn.jotfor.ms/s/umd/9284bce5746/for-form-embed-handler.js'></script>
-<script>
-  window.jotformEmbedHandler("iframe[id='JotFormIFrame-019b9f2af89f708b9bee5ec91ac5863eb022']",
-    "https://www.jotform.com")
-</script>
-    </section>
 
-   
+    width:100%;
+    " scrolling="no">
+    </iframe>
+    <script src='https://cdn.jotfor.ms/s/umd/9284bce5746/for-form-embed-handler.js'></script>
+    <script>
+    window.jotformEmbedHandler("iframe[id='JotFormIFrame-019b9f2af89f708b9bee5ec91ac5863eb022']",
+    "https://www.jotform.com")
+    </script>
+</section>
+What We Offer -->
+
 <!-- Testimonials -->
     <section class="testimonials">
         <div class="container">
@@ -1355,6 +1357,11 @@
                     <h5>✉ Email</h5>
                     <a href="mailto:hi@email.com">hi@email.com</a>
                 </div>
+                 <div class="social-icons" style="justify-content: flex-start; margin-top: 20px;">
+                        <a href="#">f</a>
+                        <a href="#">t</a>
+                        <a href="#">in</a>
+                    </div>
             </div>
             <div class="contact-form">
                 <h3>Have any question?</h3>
@@ -1367,55 +1374,6 @@
                 </form>
             </div>
         </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="newsletter">
-                <div>
-                    <h3>Subscribe to Newsletter</h3>
-                    <p>Stay updated with our latest news and offers</p>
-                </div>
-                <div class="newsletter-form">
-                    <input type="email" placeholder="Enter a valid email address">
-                    <button>Subscribe</button>
-                </div>
-            </div>
-            <div class="footer-content">
-                <div class="footer-about">
-                    <img src="https://via.placeholder.com/200x60/ffffff/ff5a5a?text=Language+School" alt="Logo">
-                    <p>📍 121 Rock Street, 21 Avenue, New York, NY 92103-9000</p>
-                    <p>📞 +123 456 7890</p>
-                    <p>✉ hi@email.com</p>
-                    <div class="social-icons" style="justify-content: flex-start; margin-top: 20px;">
-                        <a href="#">f</a>
-                        <a href="#">t</a>
-                        <a href="#">in</a>
-                    </div>
-                </div>
-                <div class="footer-links">
-                    <h4>Courses</h4>
-                    <ul>
-                        <li><a href="#">Private Lessons</a></li>
-                        <li><a href="#">Online Learning</a></li>
-                        <li><a href="#">English for Kids</a></li>
-                        <li><a href="#">Long-Term Courses</a></li>
-                        <li><a href="#">English for Business</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Help & support</h4>
-                    <ul>
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Resources</a></li>
-                        <li><a href="#">Our Blog</a></li>
-                        <li><a href="#">Our Partners</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
+    </section>   
 </body>
 </html>
