img ajustes en el html

--- a/pinyin.html
+++ b/pinyin.html
@@ -948,7 +948,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="logoPinyin.jpeg" alt="Logo">
+                    <img src="logoPinyin.png" alt="Logo">
                 </div>
                 <nav>
                     <ul>
